# engage-2

./: .env  .pre-commit-config.yaml  Makefile  README.md  cloud-init.yml  docker-compose.yml  package-lock.json  package.json  start.sh  stop.sh
.github/workflows/: ci.yaml
backend/: .flake8  Dockerfile  README.md  pyproject.toml
backend/src/: alembic.ini  cli.py  main.py  settings.py
backend/src/api/: app.py
backend/src/api/auth/: roles.py  users.py
backend/src/api/routers/: auth.py  comments.py  organizations.py  projects.py
backend/src/app/: app.py  db.py  users.py
backend/src/app/api/: schemas.py
backend/src/app/api/routers/: user_management.py
backend/src/app/auth/: roles.py  users.py
backend/src/app/database/: connection.py  models.py
backend/src/database/: session.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 0001_create_tables.py  0001_test_setup.py  0002_add_project_table.py  0002_insert_legal_forms_and_sectors.py  0003_create_comments_table.py
backend/src/models/: __init__.py  comment.py  organization.py  project.py  user.py
backend/tests/: base.py  conftest.py  test_auth.py  test_comments.py  test_projects.py
backend/tests/fixtures/: __init__.py  client.py  database.py  overrides.py
docs/: github_workflow.md  naming_conventions.md  project_structure.md
frontend/: .eslintignore  .eslintrc.js  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: ContactList.vue  ContactListCreateDialog.vue  TheNavigationDrawer.vue  ViewOrganizationDeleteDialog.vue  (+2 more)
scripts/: populate_organizations.py
scritps/: populate_projects.py
src/: App.vue  main.js
src/plugins/: supabase.js
src/router/: index.js
src/views/: Home.vue  Login.vue  Project.vue  SignUp.vue
(+48 files in other folders)
