[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.0"}
uvicorn = "^0.21.0"
gunicorn = "^20.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"
black = "^23.1.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
